2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MacPlatform.addin.xml: Bumped MD version.

2010-03-18  Levi Bard  <levi@unity3d.com>

	* MacPlatform.cs: Track API changes.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Commands.cs:
	* MacPlatform.cs:
	* Menus/OSXMenu.cs:
	* MacPlatform.csproj:
	* gtk-gui/gui.stetic:
	* MacPlatform.addin.xml:
	* Updater/UpdateResult.cs:
	* Updater/UpdateDialog.cs:
	* Updater/UpdateService.cs: Merged MD.Projects into MD.Core,
	  and MD.Projects.Gui, MD.Core.Gui and MD.Components into
	  MD.Ide.

2010-03-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Unbreak the OpenDocuments handler - the
	  position handling changes stopped it from working when
	  starting MD and when opening solutions.

2010-03-16  Levi Bard  <levi@unity3d.com>

	* MacPlatform/MacPlatform.cs
	* MacPlatform/Framework/Carbon.cs
	* MacPlatform/Framework/ApplicationEvents.cs: Enable position 
	  to be passed in OpenDocuments call.

2010-02-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj:
	* Framework/NavDialog.cs:
	* Framework/HIToolbox.cs:
	* Framework/AppleEvent.cs:
	* Framework/CoreFoundation.cs:
	* MacSelectFileDialogHandler.cs: More work on native dialogs.

2010-02-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix extensions.

	* MacSelectFileDialogHandler.cs: Stub other dialog handlers.

2010-02-22  Michael Hutchinson  <mhutchinson@novell.com>

	* Framework/Carbon.cs: Better errors in exceptions.

2010-02-22  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj:
	* Framework/Carbon.cs:
	* MacPlatform.addin.xml:
	* Framework/NavDialog.cs:
	* MacSelectFileDialogHandler.cs: First shot at implementing
	  Mac native dialogs.

2010-01-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Updater/UpdateService.cs: Send env flags to the update
	  server.
